--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "GoalsApp",
-    "short_name": "Goals App helps you achieve your goals!",
+    "name": "Goals App helps you achieve your goals!",
+    "short_name": "GoalsApp",
     "theme_color": "#d155d7",
     "background_color": "#0e2334",
     "display": "standalone",
